--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-kids",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/jejdacz/math-kids",
+  "homepage": "https://jejdacz.github.io/math-kids/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
